<?xml version="1.0"?>
<package format="2">
  <name>pcl_interface</name>
  <version>0.0.1</version>
  <description>The pcl_interface package</description>
  <maintainer email="wu@jsk.imi.i.u-tokyo.ac.jp">Liqi Wu</maintainer>
  <license>Apache-2.0</license>
  <author>Liqi Wu</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
